
SVN
-------------------------------


XML:   Resolved issue CASTOR-1726 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Add documentation about support for anonymous complex/simply types in binding files
       Details: http://jira.codehaus.org/browse/CASTOR-1726
       (Werner - 20061210)

XML:   Resolved issue CASTOR-1725 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Add documentation about new <enumBinding>s in code generation binding
       Details: http://jira.codehaus.org/browse/CASTOR-1725
       (Werner - 20061210)

XML:   Resolved issue CASTOR-1491 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added support for <enumBinding> elements during XML code generation.
       Details: http://jira.codehaus.org/browse/CASTOR-1491
       (Werner - 20061209)

XML:   Resolved issue CASTOR-1724 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Add ability to invoke arbitrary user-supplied code in a CTF unit test
       Details: http://jira.codehaus.org/browse/CASTOR-1724
       (Edward - 20061209)

XML:   Resolved issue CASTOR-1723 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Extended support for complete validation of ID values during unmarshalling.
       Details: http://jira.codehaus.org/browse/CASTOR-1723
       (Werner - 20061208)

XML:   Resolved issue CASTOR-1721 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added new isValidating() method to Unmarshaller.
       Details: http://jira.codehaus.org/browse/CASTOR-1721
       (Werner - 20061206)

XML:   Resolved issue CASTOR-1715 using contribution from Edward Kuns [edward.kuns@aspect.com]
       SRCGEN needs to qualify all uses of members of java.lang
       Details: http://jira.codehaus.org/browse/CASTOR-1715
       (Edward - 20061202)

XML:   Resolved issue CASTOR-1713 using contribution from Edward Kuns [edward.kuns@aspect.com]